<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <name>xml2json</name>
    <description>Simple tool for converting large XML-files to JSON or JSON to XML</description>
    
    <groupId>com.fs</groupId>
    <artifactId>xml2json</artifactId>
    <version>1.1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    
    <developers>
        <developer>
            <name>Anton Mykolaienko</name>
            <email>amykolaienko@gmail.com</email>
            <roles>
                <role>Main developer</role>
            </roles>
        </developer>
    </developers>
    
    <dependencies>
        <dependency>
            <groupId>de.odysseus.staxon</groupId>
            <artifactId>staxon</artifactId>
            <version>1.3</version>
        </dependency>
        <!--
        <dependency>
            <groupId>de.odysseus.staxon</groupId>
            <artifactId>staxon-gson</artifactId>
            <version>1.3</version>
        </dependency>
        -->
        
        <dependency>
            <groupId>de.odysseus.staxon</groupId>
            <artifactId>staxon-jackson</artifactId>
            <version>1.3</version>
            <exclusions>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.8.8</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
            <version>2.8.8</version>
        </dependency>
        
        <dependency>
            <groupId>org.codehaus.woodstox</groupId>
            <artifactId>woodstox-core-asl</artifactId>
            <version>4.4.1</version>
        </dependency>
        
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.25</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.25</version>
        </dependency>
        
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.5</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <archive>
                        <index>true</index>
                        <addMavenDescriptor>false</addMavenDescriptor>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                        <manifestEntries>
                            <Main-class>com.fs.xml2json.WindowsMain</Main-class>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
                        
            <plugin>
                <groupId>com.zenjava</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>8.8.3</version>
                <configuration>
                    <mainClass>com.fs.xml2json.WindowsMain</mainClass>
                    <vendor>Anton Mykolaienko</vendor>
                    <verbose>true</verbose>
                    <jfxAppOutputDir>${project.build.directory}/os/app</jfxAppOutputDir>
                    <nativeOutputDir>${project.build.directory}/os/distribution</nativeOutputDir>
                    <nativeReleaseVersion>${project.version}</nativeReleaseVersion>
                    <appName>${project.name}</appName>
                    
                    <manifestAttributes>
                        <Specification-Title>${project.name}</Specification-Title>
                        <Specification-Version>${project.version}</Specification-Version>
                        <Specification-Vendor>${project.organization.name}</Specification-Vendor>
                        <Implementation-Title>${project.name}</Implementation-Title>
                        <Implementation-Version>${project.version}</Implementation-Version>
                        <Implementation-Vendor-Id>${project.groupId}</Implementation-Vendor-Id>
                        <Implementation-Vendor>${project.organization.name</Implementation-Vendor>
                    </manifestAttributes>
                    
                    <jvmArgs>
                        <argument>-Xmx512m</argument>
                        <argument>-Dvisualvm.display.name=${project.name}</argument>
                    </jvmArgs>
                </configuration>
                <executions>
                    <execution>
                        <!-- required before build-native -->
                        <id>create-jfxjar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>build-jar</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>create-native</id>
                        <phase>package</phase>
                        <goals>
                            <goal>build-native</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>create-archive</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <descriptor>src/assembly/assembly.xml</descriptor>
                    <archive>
                        <manifest>
                            <mainClass>com.fs.xml2json.WindowsMain</mainClass>
                        </manifest>
                    </archive>
                    <!--<descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>-->
                </configuration>
            </plugin>
            
            <!--
            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <version>1.7.16</version>
                <executions>
                    <execution>
                        <id>l4j-clui</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <headerType>gui</headerType>
                            <outfile>target/xml2json.exe</outfile>
                            <jar>target/xml2json-${version}-jar-with-dependencies.jar</jar>
                            <errTitle>xml2json</errTitle>
                            <classPath>
                                <mainClass>com.fs.xml2json.WindowsMain</mainClass>
                                <addDependencies>false</addDependencies>
                                <preCp>anything</preCp>
                            </classPath>
                            <jre>
                                <minVersion>1.8.0</minVersion>
                                <opts>
                                    <opt>-Djava.endorsed.dirs=./endorsed</opt>
                                </opts>
                            </jre>
                            <versionInfo>
                                <fileVersion>1.0.0.0</fileVersion>
                                <txtFileVersion>First version</txtFileVersion>
                                <fileDescription>Simple tool for converting XML to JSON and vise vera</fileDescription>
                                <copyright>Copyright</copyright>
                                <productVersion>1.0.0.0</productVersion>
                                <txtProductVersion>First version</txtProductVersion>
                                <productName>Xml2Json</productName>
                                <internalName>xml2json</internalName>
                                <originalFilename>xml2json.exe</originalFilename>
                            </versionInfo>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            -->
        </plugins>
    </build>
    
    
    <!-- TODO: create profiles fow 32-bit systems and for Mac OS X -->
    <profiles>
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        
        <profile>
            <id>build_windows</id>
        </profile>
    </profiles>
</project>